fix: ajustando solicitação de ajuste de ponto
